infra/kubernetes/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aaa-api
  namespace: aaa
spec:
  selector:
    app: aaa-api
  ports:
    - port: 80
      targetPort: 3001
      protocol: TCP
  type: ClusterIP
