infra/kubernetes/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aaa-web
  namespace: aaa
spec:
  selector:
    app: aaa-web
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
